--- a/Quiz/Week02_Quiz01 (1).ipynb
+++ b/Quiz/Week02_Quiz01 (1).ipynb
@@ -3135,26 +3135,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "input_array = np.array([3,2,1,2,3,3,3])\n",
     "#your code goes here\n",
-    "m = np.zeros((7,3))\n",
-    "m_len = m.shape[1]\n",
-    "\n",
-    "for i in range(m_len):\n",
-    "    m[i] = [if ]"
+    "b = np.zeros((input_array.size, input_array.max() + 1))\n",
+    "b[np.arange(input_array.size), input_array] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 1.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
    ]
   },
   {
